--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
         git clone https://github.com/microsoft/vcpkg.git
         if ($LASTEXITCODE -ne 0) { exit 1 }
         cd vcpkg
-        git checkout 9a98f93671f984351377044210854900bfd73171
+        git checkout 2024.10.21
         if ($LASTEXITCODE -ne 0) { exit 1 }
         .\bootstrap-vcpkg.bat
         if ($LASTEXITCODE -ne 0) { exit 1 }
@@ -141,7 +141,7 @@ jobs:
     - name: Configure CMake
       shell: powershell
       run: |
-        cmake -B build -S . -CMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -S . -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static -DCMAKE_BUILD_TYPE=Release
         if ($LASTEXITCODE -ne 0) { exit 1 }
     - name: Build
       shell: powershell
@@ -173,7 +173,7 @@ jobs:
         if-no-files-found: warn
   build-macos:
     needs: install-deps
-    runs-on: macos-12 # High Sierra-compatible
+    runs-on: macos-12
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -202,7 +202,7 @@ jobs:
         fi
         git clone https://github.com/microsoft/vcpkg.git
         cd vcpkg
-        git checkout 9a98f93671f984351377044210854900bfd73171
+        git checkout 2024.10.21
         ./bootstrap-vcpkg.sh
         ./vcpkg integrate install
         cd ..
@@ -249,7 +249,7 @@ jobs:
         }
     - name: Configure CMake
       run: |
-        cmake -B build -S . -CMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-osx
+        cmake -B build -S . -CMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-osx -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13
         if [ $? -ne 0 ]; then exit 1; fi
     - name: Build
       run: |
