--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
         git clone https://github.com/microsoft/vcpkg.git
         if ($LASTEXITCODE -ne 0) { exit 1 }
         cd vcpkg
+        git fetch --tags
         git checkout 2024.10.21
         if ($LASTEXITCODE -ne 0) { exit 1 }
         .\bootstrap-vcpkg.bat
@@ -202,6 +203,7 @@ jobs:
         fi
         git clone https://github.com/microsoft/vcpkg.git
         cd vcpkg
+        git fetch --tags
         git checkout 2024.10.21
         ./bootstrap-vcpkg.sh
         ./vcpkg integrate install
